--- a/package.json
+++ b/package.json
@@ -16,6 +16,12 @@
     "body-parser": "^1.3.1",
     "static-favicon": "^2.0.0-alpha",
     "mongoose": "^3.8.12",
-    "socket.io": "^1.0.4"
+    "socket.io": "^1.0.4",
+    "passport": "^0.2.0",
+    "passport-local": "^1.0.0",
+    "connect-flash": "^0.1.1",
+    "bcrypt": "^0.7.8",
+    "express-session": "^1.4.0",
+    "cookie-parser": "^1.3.1"
   }
 }
