--- a/client/bower.json
+++ b/client/bower.json
@@ -22,6 +22,7 @@
     "underscore": "~1.6.0",
     "socket.io": "~1.0.4",
     "angular": "~1.2.18",
-    "angular-ui-router": "~0.2.10"
+    "angular-ui-router": "~0.2.10",
+    "angular-cookies": "~1.2.18"
   }
 }
