--- a/package.json
+++ b/package.json
@@ -23,5 +23,9 @@
     "bcrypt": "^0.7.8",
     "express-session": "^1.4.0",
     "cookie-parser": "^1.3.1"
+  },
+  "devDependencies": {
+    "grunt": "^0.4.5",
+    "grunt-contrib-jshint": "^0.10.0"
   }
 }
