--- a/client/bower.json
+++ b/client/bower.json
@@ -23,6 +23,7 @@
     "socket.io": "~1.0.4",
     "angular": "~1.2.18",
     "angular-ui-router": "~0.2.10",
-    "angular-cookies": "~1.2.18"
+    "angular-cookies": "~1.2.18",
+    "angular-mocks": "~1.2.18"
   }
 }
