--- a/package.json
+++ b/package.json
@@ -35,6 +35,10 @@
     "karma-requirejs": "^0.2.2",
     "karma-mocha": "^0.1.4",
     "chai": "^1.9.1",
-    "karma-chai": "^0.1.0"
+    "karma-chai": "^0.1.0",
+    "grunt-contrib-concat": "^0.4.0",
+    "grunt-contrib-cssmin": "^0.10.0",
+    "grunt-contrib-uglify": "^0.5.0",
+    "grunt-usemin": "^2.2.0"
   }
 }
