--- a/package.json
+++ b/package.json
@@ -39,6 +39,9 @@
     "grunt-contrib-concat": "^0.4.0",
     "grunt-contrib-cssmin": "^0.10.0",
     "grunt-contrib-uglify": "^0.5.0",
-    "grunt-usemin": "^2.2.0"
+    "grunt-usemin": "^2.2.0",
+    "grunt-contrib-clean": "^0.5.0",
+    "grunt-contrib-copy": "^0.5.0",
+    "matchdep": "^0.3.0"
   }
 }
