--- a/package.json
+++ b/package.json
@@ -19,9 +19,9 @@
     "passport": "^0.2.0",
     "passport-local": "^1.0.0",
     "connect-flash": "^0.1.1",
-    "bcrypt": "^0.7.8",
     "express-session": "^1.4.0",
-    "cookie-parser": "^1.3.1"
+    "cookie-parser": "^1.3.1",
+    "bcrypt-nodejs": "0.0.3"
   },
   "devDependencies": {
     "grunt": "^0.4.5",
