--- a/package.json
+++ b/package.json
@@ -12,16 +12,16 @@
   "author": "Marco Au",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.4.3",
+    "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.3.1",
-    "static-favicon": "^2.0.0-alpha",
-    "mongoose": "^3.8.12",
+    "connect-flash": "^0.1.1",
+    "cookie-parser": "^1.3.1",
+    "express": "^4.4.3",
+    "express-session": "^1.4.0",
+    "mongoose": "^4.0.7",
     "passport": "^0.2.0",
     "passport-local": "^1.0.0",
-    "connect-flash": "^0.1.1",
-    "express-session": "^1.4.0",
-    "cookie-parser": "^1.3.1",
-    "bcrypt-nodejs": "0.0.3"
+    "static-favicon": "^2.0.0-alpha"
   },
   "devDependencies": {
     "grunt": "^0.4.5",
